--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ DB_NAME="nama_db_anda"
 
 # Kunci Rahasia JWT
 JWT_SECRET="kunci-rahasia-yang-sangat-aman-dan-sulit-ditebak"
+
+EMAIL_PENGIRIM="emailanda@contoh.com"
+PASSWORD_EMAIL="passwordemail" 
